--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "msnodesqlv8": "^4.1.0",
     "mssql": "^9.1.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "tedious": "^16.1.0"
   }
 }
